add meta view
